@@ -60,7 +60,7 @@
 </div>
 
 ### 命令行
-> java -noverify -javaagent:BurpSuiteLoader.jar -jar burpsuite_pro_xxxx.jar
+> java --illegal-access=permit -noverify -Dsun.java2d.d3d=false -Dsun.java2d.noddraw=true --add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm.tree=ALL-UNNAMED --add-opens=java.base/jdk.internal.org.objectweb.asm.Opcodes=ALL-UNNAMED -javaagent:BurpSuiteLoader.jar  -jar burpsuite_pro.jar
 ### Windows
 1. 下载：https://portswigger-cdn.net/burp/releases/download?product=pro&version=2022.3.1&type=WindowsX64
 2. 放置进安装目录
